--- a/AboutGeorgia/admin-panel/home-page.html
+++ b/AboutGeorgia/admin-panel/home-page.html
@@ -42,7 +42,7 @@
                                             <ul class="nav flex-column">
                                                     
                                                     <li class="nav-item">
-                                                      <a class="nav-link" href="#">სამზარეულო</a>
+                                                      <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
                                                     </li>
                                                     <li class="nav-item">
                                                       <a class="nav-link" href="#">ღირსშესანიშნაობები</a>
