--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="col-xl-6">
                         <div class="clip">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/4avJ2JBD8PM"
+                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/4avJ2JBD8PM"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
