admin paneli srulad

--- a/AboutGeorgia/admin-panel/kitchen-page.html
+++ b/AboutGeorgia/admin-panel/kitchen-page.html
@@ -73,10 +73,10 @@
                                 <div class="clear-box"></div>
                 </aside>     
          <section>
-             <div class="add-new text-center"><p>ცივი კერძები</p>
+             <div class="add-new text-center"><p><a href="#">ცივი კერძები</a> </p>
                 <a href="#"> <i class="fas fa-pencil-alt" style="margin-right:10px;"></i></a>
                 <a href="#"> <i class="fas fa-trash-alt"></i></a></div>
-             <div class="add-new text-center"><p>ცხელი კერძები</p>
+             <div class="add-new text-center"><p><a href="#">ცხელი კერძები</a> </p>
                 <a href="#"> <i class="fas fa-pencil-alt"style="margin-right:10px"></i></a>
                 <a href="#">   <i class="fas fa-trash-alt"></i></a></div>
              <div class="add-new text-center"><p>კატეგორიის დამატება</p>
