--- a/AboutGeorgia/admin-panel/edit-page.html
+++ b/AboutGeorgia/admin-panel/edit-page.html
@@ -45,7 +45,7 @@
                                                       <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
                                                     </li>
                                                     <li class="nav-item">
-                                                      <a class="nav-link" href="#">ღირსშესანიშნაობები</a>
+                                                      <a class="nav-link" href="sights.html">ღირსშესანიშნაობები</a>
                                                     </li>
                                                     <li class="nav-item">
                                                             <a class="nav-link" href="#">ახალი კატეგორიის დამატება</a>
