--- a/AboutGeorgia/admin-panel/sights.html
+++ b/AboutGeorgia/admin-panel/sights.html
@@ -25,8 +25,8 @@
                                 <div id="accordion">
                                   <div class="card">
                                     <div class="card-header">
-                                      <a class="card-link" data-toggle="collapse" href="#">
-                                       მთავარი
+                                      <a class="card-link" data-toggle="collapse" href="home-page.html">
+                                        <a href="home-page.html"> მთავარი</a>
                                       </a>
                                     </div>
                                     </div>
