--- a/AboutGeorgia/admin-panel/kitchen-page.html
+++ b/AboutGeorgia/admin-panel/kitchen-page.html
@@ -46,7 +46,7 @@
                                                       <a class="nav-link" href="kitchen-page.html">სამზარეულო</a>
                                                     </li>
                                                     <li class="nav-item">
-                                                      <a class="nav-link" href="#">ღირსშესანიშნაობები</a>
+                                                      <a class="nav-link" href="sights.html">ღირსშესანიშნაობები</a>
                                                     </li>
                                                     <li class="nav-item">
                                                             <a class="nav-link" href="#">კატეგორიის დამატება</a>
@@ -75,10 +75,60 @@
          <section>
              <div class="add-new text-center"><p><a href="#">ცივი კერძები</a> </p>
                 <a href="#"> <i class="fas fa-pencil-alt" style="margin-right:10px;"></i></a>
-                <a href="#"> <i class="fas fa-trash-alt"></i></a></div>
+                <!-- Button trigger modal -->
+<button type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+  <a href="#"> <i class="fas fa-trash-alt"></i></a>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">წაშლა</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       ნამდვილად გსურთ წაშალოთ ჩანაწერი?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn  btn-danger" data-dismiss="modal">დიახ</button>
+        <button type="button" class="btn  btn-secondary">არა</button>
+      </div>
+    </div>
+  </div>
+</div></td>
+    </tr></div>
              <div class="add-new text-center"><p><a href="#">ცხელი კერძები</a> </p>
                 <a href="#"> <i class="fas fa-pencil-alt"style="margin-right:10px"></i></a>
-                <a href="#">   <i class="fas fa-trash-alt"></i></a></div>
+                <!-- Button trigger modal -->
+<button type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+  <a href="#"> <i class="fas fa-trash-alt"></i></a>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">წაშლა</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       ნამდვილად გსურთ წაშალოთ ჩანაწერი?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn  btn-danger" data-dismiss="modal">დიახ</button>
+        <button type="button" class="btn  btn-secondary">არა</button>
+      </div>
+    </div>
+  </div>
+</div></td>
+    </tr></div>
              <div class="add-new text-center"><p>კატეგორიის დამატება</p>
                 <a href="#"> <i class="fas fa-plus"></i></a>
              </div>
@@ -110,8 +160,33 @@
       <td>ცივი კერძები</td>
       <td>ხაჭაპური</td>
       <td><a href="edit-page.html"> <i class="fas fa-pencil-alt" style="margin-right:10px;"></i></a>
-        <a href="#"> <i class="fas fa-trash-alt"></i></a></div></td>
-    </tr>
+        </div>
+      <!-- Button trigger modal -->
+<button type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+  <a href="#"> <i class="fas fa-trash-alt"></i></a>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">წაშლა</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       ნამდვილად გსურთ წაშალოთ ჩანაწერი?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn  btn-danger" data-dismiss="modal">დიახ</button>
+        <button type="button" class="btn  btn-secondary">არა</button>
+      </div>
+    </div>
+  </div>
+</div></td>
+    </tr><!--modal end-->
     <tr>
       <th scope="row">2</th>
       <td>ცხელი კერძები</td>
