--- a/AboutGeorgia/admin-panel/sights.html
+++ b/AboutGeorgia/admin-panel/sights.html
@@ -75,7 +75,32 @@
          <section>
              <div class="add-new text-center"><p><a href="#">კურორტები</a> </p>
                 <a href="#"> <i class="fas fa-pencil-alt" style="margin-right:10px;"></i></a>
-                <a href="#"> <i class="fas fa-trash-alt"></i></a></div>
+                <!-- Button trigger modal -->
+<button type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+  <a href="#"> <i class="fas fa-trash-alt"></i></a>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">წაშლა</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       ნამდვილად გსურთ წაშალოთ ჩანაწერი?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn  btn-danger" data-dismiss="modal">დიახ</button>
+        <button type="button" class="btn  btn-secondary">არა</button>
+      </div>
+    </div>
+  </div>
+</div></td>
+    </tr></div>
              <div class="add-new text-center"><p><a href="#">ეკლესია მონასტრები</a> </p>
                 <a href="#"> <i class="fas fa-pencil-alt"style="margin-right:10px"></i></a>
                 <a href="#">   <i class="fas fa-trash-alt"></i></a></div>
@@ -113,7 +138,32 @@
       <td>კურორტები</td>
       <td>ბაკურიანი</td>
       <td><a href="edit-sights-page.html"> <i class="fas fa-pencil-alt" style="margin-right:10px;"></i></a>
-        <a href="#"> <i class="fas fa-trash-alt"></i></a></div></td>
+        <!-- Button trigger modal -->
+<button type="button" class="btn" data-toggle="modal" data-target="#exampleModal">
+  <a href="#"> <i class="fas fa-trash-alt"></i></a>
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">წაშლა</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       ნამდვილად გსურთ წაშალოთ ჩანაწერი?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn  btn-danger" data-dismiss="modal">დიახ</button>
+        <button type="button" class="btn  btn-secondary">არა</button>
+      </div>
+    </div>
+  </div>
+</div></td>
+    </tr></div></td>
     </tr>
     <tr>
       <th scope="row">2</th>
