--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container-fluid">
         <header>
-            <div id="header-top" class="header-top show">
+            <div id="header-top" class="header-top show1">
                 <div class="container">
                     <div class="header-social-icon"><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a> </div>                 
                     <div class="header-social-icon"><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a> </div>
