--- a/AboutGeorgia/sights-page.html
+++ b/AboutGeorgia/sights-page.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="src/styles/main.css">
-    <link rel="stylesheet" href="src/styles/common/kitchen-page.css">
+    <link rel="stylesheet" href="src/styles/common/sights-page.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -110,129 +110,84 @@
         </header>
 
         <div class="slider">
-            <img src="./assets/img/food/foni.jpg" alt="">
+            <img src="./assets/img/advanture/girshes-foni.jpg" alt="">
 
-        </div>
-
-        <div class="filter">
-            <form>
-                <div class="row">
-                    <div class="col-xl col-lg-6">
-
-                        <h3>აირჩიეთ რეგიონი</h3>
-                        <!-- <select class="custom-select" id="inputGroupSelect01">
-                            <option selected>რეგიონი ან ქალაქი..</option>
-                            <option value="1">იმერეთი</option>
-                            <option value="2">აჭარა</option>
-                        </select> -->
-                        <input class="custom-select" placeholder="რეგიონი ან ქალაქი.." list="browsers" name="browser">
-                        <datalist id="browsers">
-                          <option value="Internet Explorer">
-                          <option value="Firefox">
-                          <option value="Chrome">
-                          <option value="Opera">
-                          <option value="Safari">
-                        </datalist>
-                    </div>
-                    <div class="col-xl col-lg-6">
-                        <h3>კატეგორიის მიხედვით ძებნა</h3>
-                        <select class="custom-select" id="inputGroupSelect01">
-                            <option selected>აირჩიეთ კატეგორია</option>
-                            <option value="1">ცივი კერძები</option>
-                            <option value="2">ცხელი კერძები</option>
-                        </select>
-                    </div>
-                    <div class="col-xl col-lg-6">
-                        <h3>აირჩიეთ დასახელება</h3>
-
-                        <select class="custom-select" id="inputGroupSelect01">
-                            <option selected>დასახელება ..</option>
-                            <option value="1">ხაჭაპური</option>
-                            <option value="2">ხინკალი</option>
-                        </select>
-
-                    </div>
-                    <div class="col-xl col-lg-6">
-                        <button type="button" class="btn btn-outline-danger" onclick="">ძებნა
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
         </div>
         <main>
-
-            <section>
+            <div class="container">
                 <div class="row">
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="kerzi-konkretulad.html"><img
-                                        src="./assets/img/food/ბორანო.PNG" alt=""></a></div>
-                            <h3><a href="#">ბორანო</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>აჭარა</p>
-                        </article>
+                    <div class="col-xl-4">
+                        <aside>saziebo</aside>
                     </div>
+                    <div class="col-xl-8">
+                        <section>
+                            <div class="row">
+                                <div class="col-md-6 "><a href="#">
+                                        <article><img src="./assets/img/advanture/gareji.jpg" alt="">
+                                    </a>
+                                    <div class="text-container">
+                                        <h3>დავით-გარეჯი</h3>
+                                        <i class="fas fa-map-marker-alt"></i>
+                                        <p>კახეთი</p>
+                                    </div>
+                                    </article>
+                                </div>
+                                <div class="col-md-6">
+                                    <article><a href="#"><img src="./assets/img/advanture/elias-mta1.jpg" alt=""></a>
+                                        <div class="text-container">
+                                            <h3>ელიას მთა</h3>
+                                            <i class="fas fa-map-marker-alt"></i>
+                                            <p>კახეთი</p>
+                                        </div>
 
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><img src="./assets/img/food/xinkali2.jpg" alt=""></div>
-                        </article>
-                    </div>
-
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><img src="./assets/img/food/acharuli.png" alt=""></div>
-                        </article>
-                    </div>
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><img src="./assets/img/food/lobiojpg.jpg" alt=""></div>
-                        </article>
-                    </div>
-
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img src="./assets/img/food/chakafuli.jpg"
-                                        alt=""></a></div>
-                            <h3><a href="#">ჩაქაფული</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>კახეთი</p>
-                        </article>
-                    </div>
-
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img src="./assets/img/food/sacivi.jpg" alt=""></a>
+                                    </article>
+                                </div>
+                                <div class="col-md-6">
+                                    <article><a href="#"><img src="./assets/img/advanture/prometesmgvime.jpg"
+                                                alt=""></a>
+                                        <div class="text-container">
+                                            <h3>პრომეთეს მღვიმე</h3>
+                                            <i class="fas fa-map-marker-alt"></i>
+                                            <p>იმერეთი</p>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="col-md-6">
+                                    <article><a href="#"><img src="./assets/img/advanture/samegrelo.jpg" alt=""></a>
+                                        <div class="text-container">
+                                            <h3>მარტვილის კანიონი</h3>
+                                            <i class="fas fa-map-marker-alt"></i>
+                                            <p>სამეგრელო</p>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="col-md-6">
+                                    <article><img src="./assets/img/advanture/ushguli.JPG" alt="">
+                                        <div class="text-container">
+                                            <h3>უშგული</h3>
+                                            <i class="fas fa-map-marker-alt"></i>
+                                            <p>სვანეთი</p>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="col-md-6">
+                                    <article><img src="./assets/img/advanture/rabati.jpg" alt="">
+                                        <div class="text-container">
+                                            <h3>რაბათი</h3>
+                                            <i class="fas fa-map-marker-alt"></i>
+                                            <p>სამცხე-ჯავახეთი</p>
+                                        </div>
+                                    </article>
+                                </div>
                             </div>
-                            <h3><a href="#">საცივი</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>იმერეთი</p>
-                        </article>
-                    </div>
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img
-                                        src="./assets/img/food/nigvziani badrijani.jpg" alt=""></a></div>
-                            <h3><a href="#">ლობიანი</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>იმერეთი</p>
-                        </article>
-                    </div>
-                    <div class="col-xl col-lg-4">
-                        <article>
-                            <div class="image-container"><a href="#"><img src="./assets/img/food/kubdari.jpg"
-                                        alt=""></a></div>
-                            <h3><a href="#">კუბდარი</a></h3>
-                            <i class="fas fa-map-marker-alt"></i>
-                            <p>სვანეთი</p>
-                        </article>
+
+                        </section>
                     </div>
                 </div>
-            </section>
-
+            </div>
             <div class="clear-box"></div>
         </main>
+
 
 
 
@@ -246,7 +201,8 @@
                                 <p> ამინდი</p>
                                 <div class="weather-widget">
                                     <!-- meteo.gov.ge --><iframe src='http://meteo.gov.ge/imeteo.php?v=1;2;21;1;0;0;1'
-                                        frameborder='0' scrolling='no' width='230' height='163' border='0'></iframe></div>
+                                        frameborder='0' scrolling='no' width='230' height='163
+' border='0'></iframe></div>
                             </a>
 
                         </div>
@@ -270,21 +226,17 @@
                                             class="fab fa-twitter social-icon"></i></a> </div>
                             </div>
                             <div class="col">
-                                <div class="social-cirkle"><a href="https://www.instagram.com/"><i
-                                            class="fab fa-instagram social-icon"></i></a> </div>
+                                <div class="social-cirkle">
+                                    <a href="https://www.instagram.com/">
+                                        <i class="fab fa-instagram social-icon"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="col-xl-5 col-lg-5 col-md-4 col-sm-3"></div>
-
-
                 </div>
-
-
             </div>
-
-
             <div class="clear-box"></div>
         </footer>
 
