--- a/AboutGeorgia/admin/add-sights-categories.html
+++ b/AboutGeorgia/admin/add-sights-categories.html
@@ -110,7 +110,7 @@
                             
                             
                                 <div id="menu2" class="container tab-pane fade"><br>
-                                  <h3>Enter the name of the dish</h3>
+                                  <h3>შეიყვანეთ დასახელება</h3>
                                   <input type="text" class="form-control">
                                            <textarea name="" id="" cols="30" rows="10" placeholder="description"></textarea><br>
                                 </div>
