--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -125,32 +125,27 @@
                             <option value="1">იმერეთი</option>
                             <option value="2">აჭარა</option>
                         </select> -->
-                        <input class="custom-select" placeholder="რეგიონი ან ქალაქი.." list="browsers" name="browser">
+                        <input class="custom-select" placeholder="რეგიონი ან ქალაქი..." list="browsers" name="browser">
                         <datalist id="browsers">
-                          <option value="Internet Explorer">
-                          <option value="Firefox">
-                          <option value="Chrome">
-                          <option value="Opera">
-                          <option value="Safari">
+                          <option value="იმერეთი">
+                          <option value="სამეგრელო">
                         </datalist>
                     </div>
                     <div class="col-xl col-lg-6">
-                        <h3>კატეგორიის მიხედვით ძებნა</h3>
-                        <select class="custom-select" id="inputGroupSelect01">
-                            <option selected>აირჩიეთ კატეგორია</option>
-                            <option value="1">ცივი კერძები</option>
-                            <option value="2">ცხელი კერძები</option>
-                        </select>
+                        <h3>აირჩიეთ კატეგორია</h3>
+                        <input class="custom-select" placeholder="კატეგორია..." list="categories" name="browser">
+                        <datalist id="categories">
+                          <option value="ცივი კერძები">
+                          <option value="ცხელი კერძები">
+                        </datalist>
                     </div>
                     <div class="col-xl col-lg-6">
                         <h3>აირჩიეთ დასახელება</h3>
-
-                        <select class="custom-select" id="inputGroupSelect01">
-                            <option selected>დასახელება ..</option>
-                            <option value="1">ხაჭაპური</option>
-                            <option value="2">ხინკალი</option>
-                        </select>
-
+                        <input class="custom-select" placeholder="დასახელება..." list="name" name="browser">
+                        <datalist id="name">
+                            <option value="ხაჭაპური">
+                            <option value="ხინკალი">
+                        </datalist>
                     </div>
                     <div class="col-xl col-lg-6">
                         <button type="button" class="btn btn-outline-danger" onclick="">ძებნა
