--- a/AboutGeorgia/index.html
+++ b/AboutGeorgia/index.html
@@ -26,8 +26,8 @@
           
              <div id="header-bottom" class="header-bottom">
                  <div class="container">
-                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                                <a class="navbar-brand" href="#">Navbar</a>
+                        <nav class="navbar navbar-expand-lg bg">
+                                <a class="navbar-brand" href="index.html"><img src="./assets/img/global/logo.png"></a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                   <span class="navbar-toggler-icon"></span>
                                 </button>
@@ -35,25 +35,31 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                   <ul class="navbar-nav mr-auto">
                                     <li class="nav-item active">
-                                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                                    </li>
-                                    <li class="nav-item">
-                                      <a class="nav-link" href="#">Link</a>
+                                      <a class="nav-link" href="index.html"><p> მთავარი</p> <span class="sr-only">(current)</span></a>
                                     </li>
                                     <li class="nav-item dropdown">
+                                            <a class="nav-link dropdown-toggle" href="kitchen-page.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                           <a href="kitchen-page.html">სამზარეულო</a> 
+                                            </a>
+                                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                              <a class="dropdown-item" href="#"> ცივი კერძები</a>
+                                              <!-- <div class="dropdown-divider"></div> -->
+                                              <a class="dropdown-item" href="#">ცხელი კერძები</a>
+                                              <!-- <div class="dropdown-divider"></div> -->
+                                              <a class="dropdown-item" href="#">ქართული ღვინო</a>
+                                            </div>
+                                          </li>
+                                    <li class="nav-item dropdown">
                                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Dropdown
+                                         <a href="sights-page.html">ღირსშესანიშნაობა</a> 
                                       </a>
                                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Something else here</a>
+                                        <a class="dropdown-item" href="#">კურორტები</a>
+                                        <a class="dropdown-item" href="#">ეკლესია მონასტრები</a>
+                                        <a class="dropdown-item" href="#">ნაკრძალები</a>
                                       </div>
                                     </li>
-                                    <li class="nav-item">
-                                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                                    </li>
+                                 
                                   </ul>
                                   <form class="form-inline my-2 my-lg-0">
                                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
