--- a/AboutGeorgia/sights-page.html
+++ b/AboutGeorgia/sights-page.html
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-4">
-                        <aside>saziebo</aside>
+                        <aside class="fl-wrap filter-sidebar_item fixed-bar fixbar-action scroll-to-fixed-fixed">saziebo</aside>
                     </div>
                     <div class="col-xl-8">
                         <section>
