--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -69,41 +69,7 @@
                             </form>
                         </div>
                     </nav>
-                    <!-- <div class="container">
-                    <nav class="navbar navbar-expand-lg ">
-                        <a class="navbar-brand" href="#">
-                            <img src="./assets/img/global/logo.png">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                            aria-label="Toggle navigation">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
 
-                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Link</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link disabled" href="#" tabindex="-1"
-                                        aria-disabled="true">Disabled</a>
-                                </li>
-                            </ul>
-                            <form class="form-inline my-2 my-lg-0">
-                                <input class="form-control mr-sm-2" type="search">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                            </form>
-                        </div>
-                    </nav>
-
-                </div>-->
                 </div>
             </div>
             <div class="clear-box"></div>
@@ -127,16 +93,16 @@
                         </select> -->
                         <input class="custom-select" placeholder="რეგიონი ან ქალაქი..." list="browsers" name="browser">
                         <datalist id="browsers">
-                          <option value="იმერეთი">
-                          <option value="სამეგრელო">
+                            <option value="იმერეთი">
+                            <option value="სამეგრელო">
                         </datalist>
                     </div>
                     <div class="col-xl col-lg-6">
                         <h3>აირჩიეთ კატეგორია</h3>
                         <input class="custom-select" placeholder="კატეგორია..." list="categories" name="browser">
                         <datalist id="categories">
-                          <option value="ცივი კერძები">
-                          <option value="ცხელი კერძები">
+                            <option value="ცივი კერძები">
+                            <option value="ცხელი კერძები">
                         </datalist>
                     </div>
                     <div class="col-xl col-lg-6">
@@ -241,7 +207,8 @@
                                 <p> ამინდი</p>
                                 <div class="weather-widget">
                                     <!-- meteo.gov.ge --><iframe src='http://meteo.gov.ge/imeteo.php?v=1;2;21;1;0;0;1'
-                                        frameborder='0' scrolling='no' width='230' height='163' border='0'></iframe></div>
+                                        frameborder='0' scrolling='no' width='230' height='163' border='0'></iframe>
+                                </div>
                             </a>
 
                         </div>
@@ -293,6 +260,7 @@
                 AboutGergia.Init();
             });
             $('.dropdown-toggle').dropdown();
+
         </script>
 </body>
 
