--- a/AboutGeorgia/kitchen-page.html
+++ b/AboutGeorgia/kitchen-page.html
@@ -79,53 +79,104 @@
             <img src="./assets/img/food/foni.jpg" alt="">
 
         </div>
+        <div class="container">
+            <div class="hidden">
+                <button class="btn btn-warning" type="button" data-toggle="collapse" data-target="#collapseExample"
+                    aria-expanded="false" aria-controls="collapseExample">
+                    ძებნა
+                </button>
 
-        <div class="filter">
-            <form>
-                <div class="row">
-                    <div class="col-xl col-lg-6">
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        <form>
 
-                        <h3>აირჩიეთ რეგიონი</h3>
-                        <!-- <select class="custom-select" id="inputGroupSelect01">
-                            <option selected>რეგიონი ან ქალაქი..</option>
-                            <option value="1">იმერეთი</option>
-                            <option value="2">აჭარა</option>
-                        </select> -->
-                        <input class="custom-select" placeholder="რეგიონი ან ქალაქი..." list="browsers" name="browser">
-                        <datalist id="browsers">
-                            <option value="იმერეთი">
-                            <option value="სამეგრელო">
-                        </datalist>
+
+                            <h3>აირჩიეთ რეგიონი</h3>
+                            <input class="custom-select" placeholder="რეგიონი ან ქალაქი..." list="browsers"
+                                name="browser">
+                            <datalist id="browsers">
+                                <option value="იმერეთი">
+                                <option value="სამეგრელო">
+                            </datalist>
+
+
+                            <h3>აირჩიეთ კატეგორია</h3>
+                            <input class="custom-select" placeholder="კატეგორია..." list="categories" name="browser">
+                            <datalist id="categories">
+                                <option value="ცივი კერძები">
+                                <option value="ცხელი კერძები">
+                            </datalist>
+
+
+                            <h3>აირჩიეთ დასახელება</h3>
+                            <input class="custom-select" placeholder="დასახელება..." list="name" name="browser">
+                            <datalist id="name">
+                                <option value="ხაჭაპური">
+                                <option value="ხინკალი">
+                            </datalist>
+
+
+                            <button type="button" class="btn btn-outline-danger" onclick="">
+                                <i class="fas fa-search"></i>
+                            </button>
+
                     </div>
-                    <div class="col-xl col-lg-6">
-                        <h3>აირჩიეთ კატეგორია</h3>
-                        <input class="custom-select" placeholder="კატეგორია..." list="categories" name="browser">
-                        <datalist id="categories">
-                            <option value="ცივი კერძები">
-                            <option value="ცხელი კერძები">
-                        </datalist>
-                    </div>
-                    <div class="col-xl col-lg-6">
-                        <h3>აირჩიეთ დასახელება</h3>
-                        <input class="custom-select" placeholder="დასახელება..." list="name" name="browser">
-                        <datalist id="name">
-                            <option value="ხაჭაპური">
-                            <option value="ხინკალი">
-                        </datalist>
-                    </div>
-                    <div class="col-xl col-lg-6">
-                        <button type="button" class="btn btn-outline-danger" onclick="">ძებნა
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
+                    </form>
+
                 </div>
-            </form>
+            </div>
         </div>
+        <div class="container">
+            <div class="filter">
+                <form>
+                    <div class="row">
+                        <div class="col-xl col-lg-6">
+
+                            <h3>აირჩიეთ რეგიონი</h3>
+
+                            <input class="custom-select" placeholder="რეგიონი ან ქალაქი..." list="browsers"
+                                name="browser">
+                            <datalist id="browsers">
+                                <option value="იმერეთი">
+                                <option value="სამეგრელო">
+                            </datalist>
+                        </div>
+                        <div class="col-xl col-lg-6">
+                            <h3>აირჩიეთ კატეგორია</h3>
+                            <input class="custom-select" placeholder="კატეგორია..." list="categories" name="browser">
+                            <datalist id="categories">
+                                <option value="ცივი კერძები">
+                                <option value="ცხელი კერძები">
+                            </datalist>
+                        </div>
+                        <div class="col-xl col-lg-6">
+                            <h3>აირჩიეთ დასახელება</h3>
+                            <input class="custom-select" placeholder="დასახელება..." list="name" name="browser">
+                            <datalist id="name">
+                                <option value="ხაჭაპური">
+                                <option value="ხინკალი">
+                            </datalist>
+                        </div>
+                        <div class="col-xl col-lg-6">
+                            <button type="button" class="btn btn-outline-danger" onclick="">ძებნა
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+
+
+
+        </div>
+
+
         <main>
 
             <section>
                 <div class="row">
-                    <div class="col-xl col-lg-4">
+                    <div class="col-xl col-lg-4 col-md-6">
                         <article>
                             <div class="image-container"><a href="kerzi-konkretulad.html"><img
                                         src="./assets/img/food/ბორანო.PNG" alt=""></a></div>
@@ -135,18 +186,18 @@
                         </article>
                     </div>
 
-                    <div class="col-xl col-lg-4">
+                    <div class="col-xl col-lg-4 col-md-6">
                         <article>
                             <div class="image-container"><img src="./assets/img/food/xinkali2.jpg" alt=""></div>
                         </article>
                     </div>
 
-                    <div class="col-xl col-lg-4">
+                    <div class="col-xl col-lg-4 col-md-6">
                         <article>
                             <div class="image-container"><img src="./assets/img/food/acharuli.png" alt=""></div>
                         </article>
                     </div>
-                    <div class="col-xl col-lg-4">
+                    <div class="col-xl col-lg-4 col-md-6">
                         <article>
                             <div class="image-container"><img src="./assets/img/food/lobiojpg.jpg" alt=""></div>
                         </article>
